corrected spacing between fixed-top and carousel

--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,10 @@ article {
 }
 
 @media (max-width: 767.98px) {
+    .push-down {
+    padding-top: 75px;
+    }
+    
     #all-news-btn, #all-events-btn {
         padding-left: 50px;
         padding-right: 50px;
